# cc-webreview-ext

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  dev-tag.yml  release.yml
docs/: plan-review-flow.md  spike-claude-chrome.md
extension/: background.js  manifest.json  sidepanel.html  sidepanel.js
host/: Cargo.toml
host/agent/: Cargo.toml  build.rs
host/agent/src/: auth.rs  debuglog.rs  diag.rs  main.rs  nmhost.rs  register.rs  review.rs  session.rs  term.rs  trust.rs  update.rs
host/agent/wix/: main.wxs
host/prompts/: review.md
